recursion.cons.min.Min.scala.error
Compilation error:
Min:6: error: reassignment to val
    record=l.head
          ^